Fix overflow, it wasn't on the body...

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,7 @@ body {
   overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
 }
+
+#root {
+  overflow-x: hidden;
+}
